[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy/assets/tankBody_red_outline.png" type="Texture" id=2]
[ext_resource path="res://scenes/explosion/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemy/Turret.gd" type="Script" id=4]
[ext_resource path="res://scenes/enemy/assets/shotLarge.png" type="Texture" id=5]
[ext_resource path="res://scenes/enemy/Bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemy/assets/shotThin.png" type="Texture" id=7]
[ext_resource path="res://scenes/enemy/assets/specialBarrel1_outline.png" type="Texture" id=8]
[ext_resource path="res://scenes/ui/HealthBar.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 30 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 26 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 1 )
HealthBar = ExtResource( 9 )
MAX_HEALTH = 30

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -3.14159
shape = SubResource( 1 )

[node name="Turret" type="Area2D" parent="."]
position = Vector2( 0, -8 )
script = ExtResource( 4 )
BULLET = ExtResource( 6 )

[node name="BarrelFlash" type="AnimatedSprite" parent="Turret"]
visible = false
position = Vector2( 0, -53 )
frames = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Turret"]
rotation = 3.14159
texture = ExtResource( 8 )
centered = false
offset = Vector2( -18, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turret"]
position = Vector2( 0, -10 )
shape = SubResource( 4 )

[node name="BulletSpawn" type="Position2D" parent="Turret"]
position = Vector2( 0, -48 )

[node name="ReloadTimer" type="Timer" parent="Turret"]
wait_time = 1.5
one_shot = true

[node name="Explosion" parent="." instance=ExtResource( 3 )]
visible = false
scale = Vector2( 0.792857, 0.792857 )
frame = 0
playing = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -6.8 )
scale = Vector2( 2.8, 3.72 )

[connection signal="animation_finished" from="Turret/BarrelFlash" to="Turret" method="_on_BarrelFlash_animation_finished"]
[connection signal="timeout" from="Turret/ReloadTimer" to="Turret" method="_on_ReloadTimer_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="Turret" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
